# ml-fastapi-template

./: .gitignore
notebooks/: 1_data_exploration_preprocessing.ipynb
src/frontend/: code_collector.ipynb
src/scrape/playwright/: pw_test.py  pyproject.toml
