[tool.poetry]
name = "scraping playwright-based module"
version = "0.1.0"
description = ""
authors = ["wwt2008 <wwt2008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
